//
//  AppConstants.swift
//  Seaside Sips
//
//  Created by Ganesh Kumar on 17/03/24.
//

import Foundation

struct AppContents {
    // App name
    static let appName = "Seaside Sips"
    
    
    // Launch Screen Contents
    static let launchScreen_Title = "Find your drink."
    static let launchScreen_Description = "This is the #1 app for finding your drink online!. It's all too easy to get stuck in a drink rut. Maybe your local watering hole makes the best whiskey sour, or has a shockingly good beer and shot combo that has you thinking, why try anything else."
    static let launchScreen_ButtonTitle = "LET'S GO"
    
    // Home Page
    static let alcoholic = "Alcoholic"
    static let alcoholic_Description = "Check out the most popular Alcoholic drinks in our Seaside Sips!"
    static let nonAlcoholic = "Non-Alcoholic"
    static let nonAlcoholic_Description = "Check out the most popular Non-Alcoholic drinks in our Seaside Sips!"
    static let search = "Search"
    static let search_Description = "Search any type of drinks by tapping here!"
    
    // Detail Page
    static let ingredientsText = "Ingredients"
    
    
    // Common
    static let contentUnAvailable = "Content Unavailable"
    static let loadingText = "Loading ..."
    static let noDataFoundText = "No Data Found!"
    static let noDataFound_Description = "Please connect to the internet or try again!!!"
    
    // Search Screen
    static let searchBarPlaceHolder = "Type first letter to search"
    static let searchScreenDescription = "Search by tapping first letter of any drink, Only a single letter can be typed ..."
}
