//
//  Images.swift
//  Seaside Sips
//
//  Created by Ganesh Kumar on 17/03/24.
//

import Foundation

struct Images {
    static let alcoholic_Image = "Alcoholic"
    static let NonAlcoholic_Image = "Non_Alcoholic"
    static let searchDrinks_Image = "Search"
    static let placeholder_Image = "Placeholder"
    static let launchCocktail_Image = "Cocktail"
    static let noDataFoundSystemImage = "list.bullet.clipboard"
    static let ingredientsSystemImage = "takeoutbag.and.cup.and.straw.fill"
    static let searchDescriptionWarning = "exclamationmark.triangle.fill"
}
